# CPP

./: .gitignore  readme.txt
.github/workflows/: deploy.yml
backend/: package-lock.json  package.json  requirements.txt  serverless.yml
backend/handlers/: documents.py  products.py  reminders.py  service_history.py  warranties.py
backend/utils/: auth.py  db.py  response.py
backend/warranty_tracker/: __init__.py  document.py  validators.py  warranty.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  config.js
frontend/src/components/: FileUpload.jsx  Navbar.jsx  ProductCard.jsx  ProtectedRoute.jsx  WarrantyCard.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: AddProduct.jsx  AddWarranty.jsx  Dashboard.jsx  EditProduct.jsx  Login.jsx  ProductDetail.jsx  Products.jsx  Register.jsx  Reminders.jsx  ServiceHistory.jsx  Warranties.jsx
frontend/src/services/: api.js  auth.js
warranty-tracker-lib/: pyproject.toml  setup.py
warranty-tracker-lib/tests/: test_document.py  test_product.py  test_reminder.py  test_warranty.py
warranty-tracker-lib/warranty_tracker/: product.py  reminder.py
